fix: notification z-index to low causing it to be under dropdown

--- a/src/components/Notification/Notification.module.scss
+++ b/src/components/Notification/Notification.module.scss
@@ -1,10 +1,13 @@
 .notification {
   position: absolute;
-  background-color: rgb(233, 233, 233);
+  // background-color: rgb(233, 233, 233);
+  background-color: white;
   width: 300px;
   right: 0.1px;
+  top: 75px;
   margin-right: 1rem;
   transition: all 0.5s ease;
+  z-index: 1;
 
   &__header {
     background-color: white;
